--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@ body {
 }
 
 .container {
-  background-color: $secondary;
+  background-color: $bg;
   box-sizing: border-box;
   width: 100%;
   padding-left: 24px;
@@ -42,13 +42,12 @@ body {
   width: 100%;
   height: 300px;
   background-color: $primary;
-  border-radius: 0 0 24px 24px;
+  border-radius: 0 0 56px 56px;
   margin-bottom: 24px;
 }
 
 .metadata {
   @include flexbox(column, flex-start, space-between);
-  background-color: $tertiary;
   text-align: left;
   margin-bottom: 24px;
 }
@@ -74,7 +73,6 @@ body {
 
 .control {
   @include flexbox(column, center, space-between);
-  background-color: $tertiary;
   margin-bottom: 24px;
 }
 
@@ -88,4 +86,5 @@ body {
   border: none;
   border-radius: 100%;
   font-size: 56px;
+  padding: 8px 0 0 8px;
 }
