--- a/src/App.scss
+++ b/src/App.scss
@@ -40,16 +40,17 @@ body {
 .artwork {
   box-sizing: border-box;
   width: 100%;
-  height: 300px;
+  padding-top: 100%;
   background-color: $primary;
-  border-radius: 0 0 56px 56px;
-  margin-bottom: 24px;
+  border-radius: 40px 40px 40px 40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .metadata {
   @include flexbox(column, flex-start, space-between);
   text-align: left;
-  margin-bottom: 24px;
+  margin-bottom: 40px;
 }
 
 .radio-name {
@@ -73,7 +74,7 @@ body {
 
 .control {
   @include flexbox(column, center, space-between);
-  margin-bottom: 24px;
+  margin-bottom: 40px;
 }
 
 .play {
