Change to square

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,8 +32,8 @@ body {
   background-color: $bg;
   box-sizing: border-box;
   width: 100%;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding-left: 44px;
+  padding-right: 44px;
   @include flexbox(column, center, space-between);
 }
 
@@ -42,9 +42,8 @@ body {
   width: 100%;
   padding-top: 100%;
   background-color: $primary;
-  border-radius: 40px 40px 40px 40px;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  border-radius: 8px;
+  margin: 44px auto 44px auto;
 }
 
 .metadata {
@@ -85,7 +84,8 @@ body {
   background-color: $primary;
   outline: none;
   border: none;
-  border-radius: 100%;
+  border-radius: 8px;
   font-size: 56px;
   padding: 8px 0 0 8px;
+  border: 2px solid $primary;
 }
