--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ $tertiary      : #F0F0F0;
 $text          : #000000;
 $text-secondary: #8D8C8C;
 $bg            : #fff;
+$bg-secondary  : #e9e8e6;
 
 @mixin flexbox($direction, $align, $justify) {
   display: flex;
@@ -25,11 +26,11 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: $bg;
+  background-color: $bg-secondary;
 }
 
 .container {
-  background-color: $bg;
+  // background-color: $bg-secondary;
   box-sizing: border-box;
   width: 100%;
   padding-left: 44px;
@@ -41,11 +42,12 @@ body {
   box-sizing: border-box;
   width: 100%;
   padding-top: 100%;
-  background-color: $primary;
+  background-color: $bg-secondary;
   border-radius: 16px;
   margin: 44px auto 44px auto;
   background-image: url('./cactus.jpg');
   background-position: bottom right;
+  background-repeat: no-repeat;
   border: 4px solid $bg;
   -webkit-box-shadow: 0px 4px 12px -2px rgba(0,0,0,0.3);
   -moz-box-shadow: 0px 4px 12px -2px rgba(0,0,0,0.3);
